Update files via upload

--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
                         <td>2024</td>
                         <td>Victoria Junior College iGlobe EXCO (Logistic Director)</td>
                     </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - Results Pending</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
