Update files via upload

--- a/index.html
+++ b/index.html
@@ -223,7 +223,11 @@
                     </tr>
                     <tr>
                         <td>2024</td>
-                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - Results Pending</td>
+                        <td>Singapore Model Cabinet (SMC) - Conference Staff</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Open) - Results Pending</td>
                     </tr>
                 </tbody>
             </table>
