--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <script defer src="js/script.js"></script>
-    <title>Shadan's Webfolio</title>
+    <title>Page Relocated</title>
 </head>
 
 <body>
