--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv = "refresh" content = "0; url = https://shadan.one"/>
     <link rel="stylesheet" href="css/style-dark.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <script defer src="js/script.js"></script>
-    <title>Page Relocated</title>
+    <title>Page Relocated... Redirecting</title>
 </head>
 
 <body>
@@ -17,10 +18,10 @@
         <span class="blur"></span>
         <span class="blur"></span>
         <p>
-            The website has moved to a new URL
+            The website has moved to a new URL. You should be redirected automatically.
         </p>
         <a href="https://shadan13.github.io/" rel="noopener noreferrer">
-            <button class="btn">Visit new page</button>
+            <button class="btn">Click here if not redirected</button>
         </a>
     </header>
 
